Bug 1226904 - Fix boundary checking for leaves collecting. r=roc